# scratch-risc-v-kernel

./: Cargo.toml  build.rs  flake.nix  link_script.ld  pack.sh  package.nix
src/: display.rs  entry.s  hex.rs  image.raw  main.rs  pen.rs  uart.rs
