[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = "full"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
# panic = "abort"

[dependencies]
fastrand = { version = "2.0.2", default-features = false, features = ["alloc"] }
portable-atomic = { version = "1.6.0", features = ["unsafe-assume-single-core"] }
spin = { version = "0.9.8", default-features = true, features = ["portable_atomic"] }
talc = "4.3.1"
micromath = "2.1.0"
